@@ -342,13 +342,13 @@ DFHACK_EXPORT df::activity_entry *getMainSocialActivity(df::unit *unit);
 DFHACK_EXPORT df::activity_event *getMainSocialEvent(df::unit *unit);
 
 // get largest (i.e. most negative) focus penalty for a set of needs
-using need_types_set = std::bitset<ENUM_LAST_ITEM(need_type)+1UL>;
-DFHACK_EXPORT int32_t getFocusPenalty(df::unit* unit, need_types_set need_types);
+using need_type_set = std::bitset<ENUM_LAST_ITEM(need_type)+1UL>;
+DFHACK_EXPORT int32_t getFocusPenalty(df::unit* unit, need_type_set need_types);
 // get focused penalty for a single need
 DFHACK_EXPORT int32_t getFocusPenalty(df::unit* unit, df::need_type need_type);
 
 // unit has an unbailable social activity (e.g. "Socialize!")
-DFHACK_EXPORT bool unbailableSocialActivity(df::unit *unit);
+DFHACK_EXPORT bool hasUnbailableSocialActivity(df::unit *unit);
 // unit can be assigned a job
 DFHACK_EXPORT bool isJobAvailable(df::unit *unit, bool interrupt_social);
 
